--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,11 @@ exclude = .git, venv*, docs,
 max-complexity = 10
 
 [yapf]
-COLUMN_LIMIT = 150
+column_limit = 150
+blank_line_before_nested_class_or_def = True
+dedent_closing_brackets = True
+split_before_dot=True
+split_complex_comprehension=True
 
 [tool:pytest]
 python_paths = .
