--- a/Pipfile
+++ b/Pipfile
@@ -20,5 +20,5 @@ python_version = "3.7"
 
 [scripts]
 tests = "pipenv run pytest tests -svv --cov=html_dsl --cov-report=xml --cov-report=html"
-report = "open htmlcov/index.html"
+cov = "pipenv run coverage report -m --fail-under=99"
 lint = "pipenv run flake8"
