--- a/Pipfile
+++ b/Pipfile
@@ -1,7 +1,7 @@
 [[source]]
-url = "https://mirrors.cloud.tencent.com/pypi/simple"
+url = "https://pypi.org/simple"
 verify_ssl = true
-name = "Tencent Cloud"
+name = "Pypi"
 
 [dev-packages]
 pytest = "*"
