--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,6 @@ setuptools = "*"
 python_version = "3.7"
 
 [scripts]
-tests = "pipenv run pytest tests -svv --cov=html_dsl --cov-report=xml --cov-report=html"
+tests = "pipenv run pytest tests -svv --doctest-modules --junitxml=junit/test-results.xml --cov=html_dsl --cov-report=xml --cov-report=html"
 cov = "pipenv run coverage report -m --fail-under=99"
 lint = "pipenv run flake8"
