--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -20,8 +20,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install pipenv
+        pipenv install --dev --skip-lock
     - name: Test with pytest
       run: |
-        pip install pytest
-        pytest
+        pipenv run tests
+    - name: Lint
+      run: |
+        pipenv run lint
